--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             Bienvenido a la consulta de Leyre Manni Cabrera,  psicóloga en Madrid.
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
                         </p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#servicios" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
