Change down arrow

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
                         </p>
                         <a href="#servicios" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
+                            <i class="fa fa-arrow-down animated"></i>
                         </a>
                     </div>
                 </div>
