Change location arrow to map marker

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <br>
                     <i class="fa fa-phone fa-fw"></i> (+34) 625 11 11 11 (Horario de atención telefónica 16:30 a 20:30)
                     <br>
-                    <i class="fa fa-location-arrow fa-fw"></i> Plaza de la Puerta del Sol, s/n, 28013 Madrid
+                    <i class="fa fa-map-marker fa-fw"></i> Plaza de la Puerta del Sol, s/n, 28013 Madrid
                 </p>
                 <div class="col-lg-9 col-lg-offset-2">
                     <ul class="list-inline banner-social-buttons">
