Remove full name

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">LMC Terapia</h1>
                         <p class="intro-text">
-                            Bienvenido a la consulta de Leyre Manni Cabrera,  psicóloga en Madrid.
+                            Bienvenido a la consulta de LMC,  psicóloga en Madrid.
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
                         </p>
                         <a href="#servicios" class="btn btn-circle page-scroll">
