--- a/index.html
+++ b/index.html
@@ -169,14 +169,17 @@
     </section>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <!--<div id="map"></div>-->
 
     <!-- Footer -->
     <footer>
+        <!--
         <div class="container text-center">
             <p>Copyright &copy; LMC Terapia 2016</p>
         </div>
+        -->
     </footer>
+
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
