--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+AI<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -169,7 +169,7 @@
     </section>
 
     <!-- Map Section -->
-    <!--<div id="map"></div>-->
+    <div id="map"></div>
 
     <!-- Footer -->
     <footer>
@@ -191,7 +191,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCphuMbKAsmv6x0mzlFsQo7cX55s_C9u7s&sensor=false"></script>
 
     <!-- Theme JavaScript -->
     <script src="js/grayscale.js"></script>
