--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-AI<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -37,12 +37,13 @@ AI<!DOCTYPE html>
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
+            
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <span class="light">LMC</span> Terapia
+                    Terapia <span class="light">LMC</span>
                 </a>
             </div>
 
@@ -78,7 +79,7 @@ AI<!DOCTYPE html>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">LMC Terapia</h1>
+                        <h1 class="brand-heading">Terapia LMC</h1>
                         <p class="intro-text">
                             Bienvenido a la consulta de LMC,  psicóloga en Madrid.
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
@@ -154,6 +155,7 @@ AI<!DOCTYPE html>
                     <br>
                     <i class="fa fa-map-marker fa-fw"></i> Plaza de la Puerta del Sol, s/n, 28013 Madrid
                 </p>
+                <!--
                 <div class="col-lg-9 col-lg-offset-2">
                     <ul class="list-inline banner-social-buttons">
                         <li>
@@ -164,6 +166,7 @@ AI<!DOCTYPE html>
                         </li>
                     </ul>
                 </div>
+                -->
             </div>
         </div>
     </section>
