--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ AI<!DOCTYPE html>
                 <p>
                     <i class="fa fa-envelope fa-fw"></i><a href="mailto:contacto@lmcterapia.com"> contacto@lmcterapia.com</a>
                     <br>
-                    <i class="fa fa-phone fa-fw"></i> (+34) 625 11 11 11 (Horario de atención telefónica 16:30 a 20:30)
+                    <i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> (+34) 625 11 11 11 (Horario de atención telefónica 16:30 a 20:30)
                     <br>
                     <i class="fa fa-map-marker fa-fw"></i> Plaza de la Puerta del Sol, s/n, 28013 Madrid
                 </p>
