Update location and title

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    Terapia <span class="light">LMC</span>
+                    Napalú <span class="light">Psicología</span>
                 </a>
             </div>
 
@@ -79,9 +79,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Terapia LMC</h1>
+                        <h1 class="brand-heading">Napalú</h1>
                         <p class="intro-text">
-                            Bienvenido a la consulta de LMC,  psicóloga en Madrid.
+                            Bienvenido a la consulta de LMC, psicóloga en Madrid.
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
                         </p>
                         <a href="#servicios" class="btn btn-circle page-scroll">
@@ -149,11 +149,11 @@
                 <h2>Dónde encontrarnos</h2>
                 <p>Si está viviendo una situación en la que vea la necesidad de tratar con un psicólogo en Madrid (España), no dude en contactar con nosotros:</p>
                 <p>
-                    <i class="fa fa-envelope fa-fw"></i><a href="mailto:contacto@lmcterapia.com"> contacto@lmcterapia.com</a>
+                    <i class="fa fa-envelope fa-fw"></i><a href="mailto:leyremanni.psicologia@gmail.com"> leyremanni.psicologia@gmail.com</a>
                     <br>
-                    <i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> (+34) 625 11 11 11 (Horario de atención telefónica 16:30 a 20:30)
+                    <i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> (+34) 640 11 42 45
                     <br>
-                    <i class="fa fa-map-marker fa-fw"></i> Plaza de la Puerta del Sol, s/n, 28013 Madrid
+                    <i class="fa fa-map-marker fa-fw"></i> Calle Alenza 12, 28003 Madrid
                 </p>
                 <!--
                 <div class="col-lg-9 col-lg-offset-2">
@@ -178,7 +178,7 @@
     <footer>
         <!--
         <div class="container text-center">
-            <p>Copyright &copy; LMC Terapia 2016</p>
+            <p>Copyright &copy; Napalú Psicología</p>
         </div>
         -->
     </footer>
