Set correct location

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>LMC Terapia</title>
+    <title>Napalú Psicología</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +81,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Napalú</h1>
                         <p class="intro-text">
-                            Bienvenido a la consulta de LMC, psicóloga en Madrid.
+                            Bienvenido a la consulta de Napalú Psicología, psicóloga en Madrid.
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
                         </p>
                         <a href="#servicios" class="btn btn-circle page-scroll">
