--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
                 <p>
                     <i class="fa fa-envelope fa-fw"></i><a href="mailto:leyremanni.psicologia@gmail.com"> leyremanni.psicologia@gmail.com</a>
                     <br>
-                    <i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> (+34) 640 11 42 45
+                    <i class="fa fa-phone fa-fw"></i> <a href="tel:640-11-42-45">(+34) 640 11 42 45</a>
+                    <br>
+                    <i class="fa fa-whatsapp fa-fw"></i> <a href="https://wa.me/34640114245">(+34) 640 11 42 45</a>
                     <br>
                     <i class="fa fa-map-marker fa-fw"></i> Calle Alenza 12, 28003 Madrid
                 </p>
