--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Napalú</h1>
+<!--                        <h1 class="brand-heading"><img src="img/full_trimmed_transparent_customcolor.png" alt="Napalú"></h1>-->
+                        <img src="img/full_trimmed_transparent_customcolor.png" width="50%" height="50%" alt="Napalú">
                         <p class="intro-text">
                             Bienvenido a la consulta de Napalú Psicología, psicóloga en Madrid.
                             <br>Terapias individuales con población adulta y adolescente, terapia de pareja y terapia de familia.
@@ -151,9 +152,9 @@
                 <p>
                     <i class="fa fa-envelope fa-fw"></i><a href="mailto:leyremanni.psicologia@gmail.com"> leyremanni.psicologia@gmail.com</a>
                     <br>
-                    <i class="fa fa-phone fa-fw"></i> <a href="tel:640-11-42-45">(+34) 640 11 42 45</a>
+                    <i class="fa fa-phone fa-fw"></i> <a href="tel:640-11-42-45">640 11 42 45</a>
                     <br>
-                    <i class="fa fa-whatsapp fa-fw"></i> <a href="https://wa.me/34640114245">(+34) 640 11 42 45</a>
+                    <i class="fa fa-whatsapp fa-fw"></i> <a href="https://wa.me/34640114245">640 11 42 45</a>
                     <br>
                     <i class="fa fa-map-marker fa-fw"></i> Calle Alenza 12, 28003 Madrid
                 </p>
