--- a/index.html
+++ b/index.html
@@ -179,11 +179,9 @@
 
     <!-- Footer -->
     <footer>
-        <!--
         <div class="container text-center">
-            <p>Copyright &copy; Napalú Psicología</p>
+            <p>&copy; Napalú Psicología</p>
         </div>
-        -->
     </footer>
 
 
