--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
     <body>
         <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
             <div class="w3-display-topleft w3-padding-large w3-xlarge">
-                <img src="img/logo-white.png" alt="Napalú Psicología">
+                <img src="img/logo-white.png" width="15%" alt="Napalú Psicología">
             </div>
             <div class="w3-display-middle">
                 <h1 class="w3-jumbo w3-animate-top">Napalú Psicología</h1>
                 <hr class="w3-border-grey" style="margin:auto;width:40%">
                 <p class="w3-large w3-center">algo...</p>
-            </div>
-            <div class="w3-display-bottomleft w3-padding-large">
-                Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+                <p class="w3-large w3-center"><a href="https://www.doctoralia.es/leyre-manni-cabrera/psicologo/madrid?utm_source=google&utm_medium=gmb&utm_campaign=136913&utm_content=post_book_now">Reservar Cita</a></p>
             </div>
             <div class="w3-display-bottomleft w3-container">
-                <p class="w3-xlarge">C. de Alenza, 12, 28003 Madrid</p>
+                <p class="w3-xlarge">C. de Alenza 12, 28003 Madrid</p>
             </div>
         </div>
     </body>
