--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="w3-jumbo w3-animate-top">Napalú Psicología</h1>
                 <hr class="w3-border-grey" style="margin:auto;width:40%">
                 <p class="w3-large w3-center">algo...</p>
-                <p class="w3-large w3-center"><a href="https://www.doctoralia.es/leyre-manni-cabrera/psicologo/madrid?utm_source=google&utm_medium=gmb&utm_campaign=136913&utm_content=post_book_now">Reservar Cita</a></p>
+                <p class="w3-large w3-center"><a href="https://www.doctoralia.es/leyre-manni-cabrera/psicologo/madrid?utm_source=google&utm_medium=gmb&utm_campaign=136913&utm_content=post_book_now" target=”_blank”>Reservar Cita</a></p>
             </div>
             <div class="w3-display-bottomleft w3-container">
                 <p class="w3-xlarge">C. de Alenza 12, 28003 Madrid</p>
