--- a/index.html
+++ b/index.html
@@ -15,21 +15,28 @@
           background-position: center;
           background-size: cover;
         }
+        img {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        }
         </style>
     </head>
     <body>
         <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-            <div class="w3-display-topleft w3-padding-large w3-xlarge">
-                <img src="img/logo-white.png" width="15%" alt="Napalú Psicología">
-            </div>
+<!--            <div class="w3-display-topleft w3-padding-large w3-xlarge">-->
+<!--                <img src="img/logo-white.png" style="width:10%" alt="Napalú Psicología">-->
+<!--            </div>-->
             <div class="w3-display-middle">
-                <h1 class="w3-jumbo w3-animate-top">Napalú Psicología</h1>
+<!--                <h1 class="w3-jumbo w3-animate-top">Napalú Psicología</h1>-->
+                <img src="img/logo-white.png" style="width:35%;min-width:350px"  alt="Napalú Psicología">
+                <p></p>
                 <hr class="w3-border-grey" style="margin:auto;width:40%">
                 <p class="w3-large w3-center">something...</p>
                 <p class="w3-large w3-center"><a href="https://www.doctoralia.es/leyre-manni-cabrera/psicologo/madrid?utm_source=google&utm_medium=gmb&utm_campaign=136913&utm_content=post_book_now" target=”_blank”>Reservar Cita</a></p>
             </div>
             <div class="w3-display-bottomleft w3-container">
-                <p class="w3-xlarge">C. de Alenza 12, 28003 Madrid</p>
+                <p class="w3-large">C. de Alenza 12, 28003 Madrid</p>
             </div>
         </div>
     </body>
